new chnages made on departments

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -99,7 +99,7 @@
       align-items: flex-end;
 flex-direction: column;
       background-image: url("../../assets/bgWhite.png");
-      background-color: var(--white-color);
+      background-color: white;
       background-size: cover;
       background-repeat: repeat;
       box-shadow: 0 0 20px rgba(168, 168, 168, 1);
