added kyusda pics

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -147,3 +147,9 @@ flex-direction: column;
 .newmember {
  color:'green'
 }
+.p-text{
+  padding: 5px;
+}
+.p-text :hover{
+background-color: aqua;
+}
