--- a/SlideShow Corousel/style.css
+++ b/SlideShow Corousel/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap');
-
 *{
     margin: 0;
     padding: 0;
@@ -9,11 +7,9 @@
 html, body {
    margin: 0 auto;
   margin-top: 7px;
-  /* margin-left: 7px; */
-  /* margin-right: 7px; */
   position: relative;
   background: #eee;
-  font-family: 'Nunito', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   font-size: 1.1rem;
 }
@@ -23,12 +19,10 @@ html, body {
   width: 95%;
   height: 50vh;
   background-color: #111;
-  /* background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)) ,url(img/bg\ image2.jpg); */
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)) ,url(img/kyusda2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  /* background-position: right; */
 }
 
 .bg-showcase-announcement1{
@@ -56,8 +50,6 @@ html, body {
 img{
     width: 100%;
     height: auto;
-    /* border: 2px solid #ccc; */
-    /* padding: 10px; */
 }
 
 
@@ -67,7 +59,6 @@ img{
     height: 50vh;
     overflow: hidden;
     width: 100%;
-    /* max-width: 1000px; */
     position: relative;
     margin: auto;
   }
@@ -79,7 +70,6 @@ img{
   
   /* Styles for the next and previous buttons */
   .prev, .next {
-    /* display: none; */
     background-color: rgba(0,0,0,0.8);
     cursor: pointer;
     position: relative;
@@ -148,31 +138,22 @@ img{
    top: 50%;
    left: 35%;
    transform: translate(-50%, -35%);
-   /* font-size: 2rem; */
-   /* text-align: center; */
   }
 
   .slideshow-container .slideshow-text h2{
     color: #fff;
-    /* margin-bottom: 10px; */
     text-shadow: 3px 4px 0 rgba(0,0,0,0.2);
-    /* font-weight: 700; */
     font-weight: 300;
     font-size: 4rem;
     letter-spacing: 1px;
     word-spacing: 4px;
     text-transform: uppercase;
-    /* font-family: Arial, Helvetica, sans-serif; */
   }
 
   .slideshow-container .slideshow-text .slogan{
     color: #fff;
     font-size: 1.5rem;
     padding-left: 20px;
-    /* font-weight: 500; */
-    /* font-family: Arial, Helvetica, sans-serif; */
-    /* font-family: 'Sofia', cursive; */
-    /* font-family: 'Flamenco', cursive, georgia, Arial, Helvetica, sans-serif;  */
    }
 
   .slideshow-container .slideshow-text .announcements{
@@ -183,12 +164,6 @@ img{
   .date-text{
     font-weight: 400;
   }
-  
-  /* When hovering over the slideshow container, make the text visible */
-  /* .slideshow-container:hover .slideshow-text{
-    opacity: 1;    
-  } */
-  
   
   /* Styles for number text (1/3, etc.) */
   .numbertext {
@@ -218,9 +193,6 @@ img{
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    /* background-color: #bbb; */
-    /* background-color: #fff; */
-    /* background-color: #053B50; */
     background-color: aqua;
     border-radius: 50%;
     display: inline-block;
@@ -229,9 +201,7 @@ img{
   
   /* Styles for the active dot and hover effect */
   .active, .dot:hover {
-    /* background-color: #717171; */
     background-color: #fff;
-    /* background-color: #053B50; */
   }
   
   /* Fading animation */
