--- a/SlideShow Corousel/style.css
+++ b/SlideShow Corousel/style.css
@@ -222,6 +222,50 @@ img{
   }
 
 
+  /* ....................Featured content..................... */
+.featured-content{
+  background-color: #fff;
+  width: 100%;
+}
+
+.featured-content-text h2{
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.featured-content-img{
+  display: flex;
+  flex: 1;
+  width: 100%;
+}
+
+.featured-content-img ul{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  place-items: center;
+}
+
+.featured-content-img ul li{
+  flex: 1;
+  width: 100%;
+}
+
+.img-holder{
+  width: 120px;
+  height: 90px;
+  margin: 10px;
+}
+
+
 
 
 
