--- a/SlideShow Corousel/style.css
+++ b/SlideShow Corousel/style.css
@@ -5,6 +5,7 @@
 }
 
 html, body {
+  overflow-x: hidden;
    margin: 0 auto;
   margin-top: 7px;
   position: relative;
@@ -12,7 +13,7 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   font-size: 1.1rem;
-  margin-bottom: 70px;
+  /* margin-bottom: 300px; */
 }
 
 .bg-showcase{
@@ -249,13 +250,72 @@ img{
 }
 
 .img-holder{
-  width: 120px;
+  width: 100px;
   height: auto;
   margin: 10px;
 }
 
 .img-holder figcaption{
-  font-size: 10px;
+  font-size: 12px;
+}
+
+
+.footer{
+  display: block;
+  background-color: #255760;
+  width: 100%;
+  height: 300px;
+  margin-top: 70px;
+}
+
+.footer-title h2{
+  color: #fff;
+  text-align: center;
+  padding-top: 20px;
+  margin-bottom: 10px;
+}
+
+.footer-title hr{
+width: 80%;
+margin: 0 auto;
+margin-bottom: 20px;
+}
+
+.footer-content-left{
+  color: #fff;
+  font-size: smaller;
+  font-weight: 500;
+  float: left;
+  margin-left: 25%;
+  margin-top: 20px;
+}
+
+.footer-content-right{
+  color: #fff;
+  font-size: smaller;
+  font-weight: 500;
+  float: right;
+  margin-right: 30%;
+  margin-top: 20px;
+}
+
+.footer-content-right p, .footer-content-left p{
+  padding: 10px;
+}
+
+.footer-content-right p i, .footer-content-left p i{
+  padding-right: 10px;
+}
+
+.copyright{
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  background-color: #071112;
+  width: 100%;
+  padding: 10px;
+  color: #fff;
+  font-size: smaller;
 }
 
 
