--- a/SlideShow Corousel/style.css
+++ b/SlideShow Corousel/style.css
@@ -6,16 +6,25 @@
 
 html, body {
   overflow-x: hidden;
-   margin: 0 auto;
+  margin: 0 auto;
   margin-top: 7px;
   position: relative;
   background: #eee;
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   font-size: 1.1rem;
-  /* margin-bottom: 300px; */
 }
 
+img{
+  width: 100%;
+  height: auto;
+}
+
+header{
+  position: relative;
+}
+
+/* .........SHOWCASE HEADER SECTION.......... */
 .bg-showcase{
   margin: 0 auto;
   width: 95%;
@@ -46,12 +55,6 @@ html, body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
-}
-
-
-img{
-    width: 100%;
-    height: auto;
 }
 
 
@@ -121,17 +124,6 @@ img{
   .slideshow-container:hover .next {
     display: flex;
 }
-  
-  /* Styles for caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-  }
 
 .slideshow-container .slideshow-text{
     opacity: 1;
@@ -157,15 +149,6 @@ img{
     font-size: 1.5rem;
     padding-left: 20px;
    }
-
-  .slideshow-container .slideshow-text .announcements{
-    font-size: 1.5rem;
-    font-weight: 400;
-  }
-
-  .date-text{
-    font-weight: 400;
-  }
   
   /* Styles for number text (1/3, etc.) */
   .numbertext {
@@ -177,10 +160,6 @@ img{
     left: 40px;
   }
 
-  header{
-    position: relative;
-  }
-  
   /* Styles for the dots/bullets/indicators */
 
   .dots{
@@ -224,7 +203,165 @@ img{
   }
 
 
-  /* ....................Featured content..................... */
+  /* ...........NAVIGATION SECTION............. */
+  
+  body.fixed-nav .site-wrap {
+    transform: scale(1);
+  }
+  
+  nav {
+    background: #0e2125;
+    top: 0;
+    width: 100%;
+    transition:all 0.5s;
+    position: relative;
+    z-index: 1;
+    box-shadow: 0 4px 0 rgba(0,0,0,0.5);
+  }
+  
+  body.fixed-nav nav {
+    position: fixed;
+    box-shadow: 0 4px 0 rgba(0,0,0,0.1);
+  }
+  
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+  }
+  
+  nav li {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+  }
+  
+  li.logo {
+    max-width: 0;
+    overflow: hidden;
+    background: white;
+    transition: all 0.5s;
+  }
+
+  .fixed-nav li.logo {
+    max-width: 60px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    padding: 10px;
+    display: inline-block;
+    color: #fff;
+    transition: all 0.5s;
+    font-weight: 500;
+    font-size: 1.1rem;
+  }
+
+  nav a:hover{
+    transform: scale(1.1);
+    color: aqua;
+  }
+
+   nav a:focus, nav a:active{
+    transform: scale(1.1);
+    color: aqua;
+  }
+
+  .active{
+    background: #fff;
+    color: #053B50;
+    font-weight: 700;
+    font-size: x-large;
+    text-transform: lowercase;
+    transition: all 1s;
+  }
+  
+  .active:hover{
+    transform: scale(0.9);
+    color: #053B50;
+  }
+
+  .active:visited, .active:active, .active:focus{
+    background-color: aqua;
+    color: #053B50;
+  }
+
+  .nav-icons{
+    color: #fff;
+    padding: 5px;
+  }
+
+
+/* ..............ABOUT US SECTION.............. */
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  .site-wrap {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 50px;
+    max-width: 1200px;
+    margin: 70px auto;
+    background: #eee;
+    padding: 40px;
+    text-align: left;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.05);
+    transform: scale(0.98);
+    transition: transform 0.5s;
+  }
+
+  .about-us-img img{
+    width: 100%;
+    width: 200px;
+    height: 200px; 
+    border-radius: 50%;
+    margin: 150px 40px 0 40px;
+  }
+
+  .icons{
+    position: absolute;
+    bottom: 20%;
+    left: 10%;
+    transform: translate(-20%, -10%);
+  }
+
+  .icons a{
+    padding: 8px;
+  }
+  
+
+  .about-us-description h2{
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 2.5rem;
+    position: relative;
+  }
+
+  .about-us-description h2::after{
+    content: '';
+    border-bottom: 4px solid rgba(5, 59, 80, 0.7);
+    display: block;
+    width: 30%;
+    position: absolute;
+    top: 40px;
+    bottom: 0;
+    left: 35%;
+  }
+
+  .about-text-title{
+    margin: 10px 0 5px 0;
+    color: #0e2125;
+    font-weight: 900;
+    font-size: 1.2rem;
+    text-align: center;
+  }
+
+  /* ....................Featured content section..................... */
 .featured-content{
   background-color: #fff;
   width: 100%;
@@ -260,6 +397,9 @@ img{
 }
 
 
+
+
+  /* ................FOOTER SECTION.............. */
 .footer{
   display: block;
   background-color: #255760;
@@ -316,286 +456,4 @@ margin-bottom: 20px;
   padding: 10px;
   color: #fff;
   font-size: smaller;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
-
-
-
-  
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  .site-wrap {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    column-gap: 50px;
-    max-width: 1200px;
-    margin: 70px auto;
-    background: #eee;
-    padding: 40px;
-    text-align: left;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.05);
-    transform: scale(0.98);
-    transition: transform 0.5s;
-    /* font-family: Arial, Helvetica, sans-serif; */
-  }
-
-  /* .about-us-img {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-  } */
-
-  .about-us-img img{
-    /* transform: rotate(90deg); */
-    width: 100%;
-    width: 200px;
-    height: 200px; 
-    border-radius: 50%;
-    margin: 150px 40px 0 40px;
-  }
-
-  .icons{
-    position: absolute;
-    bottom: 20%;
-    left: 10%;
-    transform: translate(-20%, -10%);
-  }
-
-  .icons a{
-    padding: 8px;
-  }
-  
-
-  .about-us-description h2{
-    margin-bottom: 30px;
-    text-align: center;
-    font-size: 2.5rem;
-    position: relative;
-    /* font-weight: 300; */
-  }
-
-  .about-us-description h2::after{
-    content: '';
-    border-bottom: 4px solid rgba(5, 59, 80, 0.7);
-    display: block;
-    width: 30%;
-    position: absolute;
-    top: 40px;
-    bottom: 0;
-    left: 35%;
-  }
-
-  /* .about-us-description h2 p{
-    letter-spacing: 1px;
-    word-spacing: 4px;
-  } */
-
-  .about-text-title{
-    margin: 10px 0 5px 0;
-    /* color: #053B50; */
-    color: #0e2125;
-    font-weight: 900;
-    font-size: 1.2rem;
-    text-align: center;
-  }
-
-  /* .about-us-paragraphs{
-    letter-spacing: 1px;
-  } */
-  
-  
-  body.fixed-nav .site-wrap {
-    transform: scale(1);
-  }
-  
-  /* header {
-    text-align: center;
-    height: 50vh;
-    background: url(img/bg\ image.jpg) center center no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  } */
-  
-  /* h1 {
-    color: white;
-    font-size: 7vw;
-    text-shadow: 3px 4px 0 rgba(0,0,0,0.2);
-  } */
-  
-  nav {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    /* background: #053B50; */
-    background: #0e2125;
-    top: 0;
-    width: 100%;
-    /* height: 50px; */
-    transition:all 0.5s;
-    position: relative;
-    z-index: 1;
-    box-shadow: 0 4px 0 rgba(0,0,0,0.5);
-  }
-  
-  body.fixed-nav nav {
-    position: fixed;
-    box-shadow: 0 4px 0 rgba(0,0,0,0.1);
-  }
-  
-  nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-  }
-  
-  nav li {
-    flex: 1;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* margin: 0 30px; */
-  }
-  
-  li.logo {
-    max-width: 0;
-    overflow: hidden;
-    background: white;
-    /* background: #333; */
-    transition: all 0.5s;
-    /* font-weight: 600; */
-    /* font-size: 30px; */
-  }
-  
-  /* li.logo a {
-    color: black;
-  } */
-  
-  .fixed-nav li.logo {
-    max-width: 60px;
-  }
-  
-  nav a {
-    text-decoration: none;
-    padding: 10px;
-    display: inline-block;
-    color: #fff;
-    transition: all 0.5s;
-    font-weight: 500;
-    font-size: 1.1rem;
-    /* text-transform: uppercase; */
-  }
-
-  nav a:hover{
-    transform: scale(1.1);
-    color: aqua;
-  }
-
-   nav a:focus, nav a:active{
-    transform: scale(1.1);
-    color: aqua;
-  }
-
-  .active{
-    background: #fff;
-    color: #053B50;
-    font-weight: 700;
-    font-size: x-large;
-    text-transform: lowercase;
-    transition: all 1s;
-  }
-  
-  .active:hover{
-    transform: scale(0.9);
-    color: #053B50;
-  }
-
-  .active:visited, .active:active, .active:focus{
-    background-color: aqua;
-    color: #053B50;
-  }
-
-  .nav-icons{
-    color: #fff;
-    padding: 5px;
-  }
-
-
-  /* ....................Eldership..................... */
-.eldership-profile{
-  background-color: #fff;
-  width: 100%;
-  margin: 0 auto;
-  overflow: hidden;
-  margin-bottom: 70px;
-}
-
-.eldership-profile .title h2{
-  font-size: 2.5rem;
-  text-align: center;
-  padding: 50px 0 10px 0;
-  position: relative;
-}
-
-.profiles{
-  display: flex;
-  flex-wrap: wrap;
-  /* flex-basis: calc(33.33% - 10px); */
-  flex: 1;
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 40px;
-  /* padding: 20px; */
-  align-items: center;
-  justify-content: center;
-  place-items: center;
-}
-
-.img-container{
-  padding: 30px;
-  margin-right: 30px;
-  margin-bottom: 70px;
-  width: 150px;
-  height: 350px;
-}
-
-.img-container p{
-  text-align: center;
-  font-size: 18px;
-}
-
-.img-container .elder-name{
-  font-size: 1.5rem;
-  font-weight: 400;
-  margin-bottom: 10px;
-  margin-top: 20px;
-}
-
-.eldership-profile img{
-  display: block;
-  width: 100%;
-  border-radius: 50%;
 }
