--- a/SlideShow Corousel/style.css
+++ b/SlideShow Corousel/style.css
@@ -17,36 +17,19 @@
 
   img{
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     overflow-y: hidden;
 
   }
 
-  header{
-    height: 90vh;
+  #main-header{
+    height: calc(100vh - 70px);
+    width: 100%;
     background-color: #eee;
     overflow: hidden;
     position: relative;
   }
 
-  .mainMenu{
-    display: flex;
-    list-style: none;
-}
-
-nav .mainMenu .closeMenu, .icons i{
-  display: none;
-  font-size: 2rem;
-  cursor: pointer;
-}
-
-.openMenu{
-  display: none;
-  margin: 20px;
-  cursor: pointer;
-  font-size: 2rem;
-}
-  
   .header-title{
     font-size: 1rem;
     text-align: center;
@@ -56,93 +39,6 @@ nav .mainMenu .closeMenu, .icons i{
   }
 
   nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #053b50;
-    width: 100%;
-    padding: 0 1rem;
-    transition: all 0.5s ease-in-out;
-    padding: 0.5rem 1rem;
-  }
-
-  .logo img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-  }
-
-  .nav-links{
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: all 0.5s ease-in-out;
-  }
-
-  .nav-links ul li{
-    list-style: none;
-    display: inline-block;
-    margin-left: 2.5rem;
-    font-size: 1.1rem;
-    font-weight: 400;
-  }
-  
-  .nav-links ul li a{
-    text-decoration: none;
-    color: #fff;
-  }
-
-  .nav-links li:hover{
-    transform: scale(1.1);
-    color: aqua;
-  }
-
-   .nav-links ul li a:hover {
-    transform: scale(1.2);
-    color: aqua;
-  }
-  
-   .nav-links ul li a:focus,
-   .nav-links ul li a:active {
-    transform: scale(1.3);
-    color: aqua;
-  }
- 
-  .membership-btn i{
-    padding-right: 0.5rem;
-  } 
-
-  .membership-btn {
-    background: #fff;
-    border-radius: 10px;
-    padding: 10px 20px;
-    color: #053b50;
-    text-transform: lowercase;
-    transition: all 1s;
-  }
-
-  .membership-btn a{
-    text-decoration: none;
-    color: #053b50;
-    font-size: 1.2rem;
-    font-weight: 600;
-  }
-  
-  .membership-btn a:hover {
-    transform: scale(0.9);
-    color: #053b50;
-  }
-  
-  .membership-btn a:visited,
-  .membership-btn a:active,
-  .membership-btn a:focus {
-    transform: scale(0.9);
-    color: #053b50;
-  } 
-
-
-  /* NEW */
-  nav{
     background-color: #053b50;
     color: #fff;
     display: flex;
@@ -150,6 +46,15 @@ nav .mainMenu .closeMenu, .icons i{
     padding: 0 1rem;
     align-items: center;
     width: 100%;
+}
+
+nav .logo img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 6px;
+  font-size: 25px;
+  cursor: pointer;
 }
 
 .mainMenu{
@@ -196,14 +101,6 @@ nav .mainMenu .closeMenu, .icons i{
     cursor: pointer;
 }
 
-nav .logo img{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin: 6px;
-    font-size: 25px;
-    cursor: pointer;
-}
 
 .membership-btn i{
     padding-right: 0.5rem;
@@ -229,17 +126,89 @@ nav .logo img{
     background-color: aqua;
     color: #fff;
   }
-  
-  .header-title{
+
+
+
+  /* HERO SECTION */
+
+.slideshow-container {
+  width: 100%;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 3s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+  #pauseButton{
+    position: absolute;
+    top: 20%;
+    right: 50px;
     font-size: 1rem;
-    text-align: center;
-    font-weight: 600;
-    color: #053b50;
-    margin: 0.7rem 0;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 50%;
+    border:2px solid #053b50;
+    background-color: rgba(51, 51, 51, 0.397);
+    width: 40px;
+    height: 40px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
+  .caption{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    color: #fff;
+    text-align: center;
+    width: 50%;
+    padding: 1rem;
+    background-color: rgba(51, 51, 51, 0.397);
+    border-radius: 10px;
+  }
 
-@media (max-width: 800px){
+  .caption h1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+  }
+
+  .caption p{
+    font-weight: 300;
+  }
+
+  /* DOWN ARROW */
+  .arrow-down i{
+    position: absolute;
+    top: 93%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.5rem;
+    color: #053b50;
+    animation: animate 2s infinite;
+  }
+
+  
+
+  @media (max-width: 800px){
     nav .mainMenu{
         position: fixed;
         top: 0;
@@ -298,130 +267,37 @@ nav .logo img{
     .membership-btn{
         margin-top: 40px;
     }
-}
 
-
-
-  /* HERO SECTION */
-
-  /* Slideshow container */
-.slideshow-container {
-  width: 100%;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 3s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-  /* DOWN ARROW */
-  .arrow-down i{
-    position: absolute;
-    top: 93%;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1.5rem;
-    color: #053b50;
-    animation: animate 2s infinite;
-  }
-
-  #pauseButton{
-    position: absolute;
-    top: 20%;
-    right: 50px;
-    font-size: 1rem;
-    color: #fff;
-    cursor: pointer;
-    border-radius: 50%;
-    border:2px solid #053b50;
-    background-color: rgba(51, 51, 51, 0.397);
-    width: 40px;
-    height: 40px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .caption{
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 2rem;
-    color: #fff;
-    text-align: center;
-    width: 50%;
-    padding: 1rem;
-    background-color: rgba(51, 51, 51, 0.397);
-    border-radius: 10px;
-  }
-
-  .caption h1{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-  }
-
-  .caption p{
-    font-weight: 300;
-  }
-
-  
-
-
-
-
-
-
-@media (max-width: 800px){
-  .mainMenu{
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      width: 100%;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
-      background-color: #333;
+    .arrow-down i{
       display: none;
-      transition: top 1s ease;
-  }
+    }
 
-  .mainMenu .closeMenu{
-      display: block;
-      position: absolute;
-      top: 20px;
+    .caption{
+      top: 30%;
+      width: 80%;
+      font-size: 1.5rem;
+    }
+
+    .caption h1{
+      font-size: 1.5rem;
+    }
+
+    .caption p{
+      font-size: 1rem;
+    }
+
+    #pauseButton{
+      top: 20%;
       right: 20px;
-  }
+      font-size: 1rem;
+      width: 30px;
+      height: 30px;
+    }
 
-  .openMenu{
-      display: block;
-      background-color: none;
-  }
+    #main-header{
+      height: 100vh;
 
-  .mainMenu li a:hover{
-      background-color: none;
-      color: #fff;
-      font-size: 1.6rem;
-  }
+    }
 
-  .icons i{
-      display: inline-block;
-      padding: 12px;
-  }
+
 }
