--- a/SlideShow Corousel/style.css
+++ b/SlideShow Corousel/style.css
@@ -13,6 +13,7 @@
     background-color: #fff;
     color: #333;
     overflow-x: hidden;
+    scroll-behavior: smooth;
   }
 
   img{
@@ -35,7 +36,7 @@
     text-align: center;
     font-weight: 600;
     color: #053b50;
-    margin: 0.7rem 0;
+    margin: 0.7rem 0.7rem;
   }
 
   nav{
@@ -206,9 +207,37 @@ nav .mainMenu .closeMenu, .icons i{
     animation: animate 2s infinite;
   }
 
+  /* scroll-top-btn */
+  .scroll-top-btn{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #fff;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    z-index: 1000;
+  }
+
+  .scroll-top-btn a{
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .scroll-top-btn:hover{
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+  }
+
   
 
-  @media (max-width: 800px){
+  @media (max-width: 768px){
     nav .mainMenu{
         position: fixed;
         top: 0;
@@ -268,6 +297,7 @@ nav .mainMenu .closeMenu, .icons i{
         margin-top: 40px;
     }
 
+
     .arrow-down i{
       display: none;
     }
@@ -287,7 +317,7 @@ nav .mainMenu .closeMenu, .icons i{
     }
 
     #pauseButton{
-      top: 20%;
+      top: 40%;
       right: 20px;
       font-size: 1rem;
       width: 30px;
@@ -295,9 +325,20 @@ nav .mainMenu .closeMenu, .icons i{
     }
 
     #main-header{
-      height: 100vh;
+      height: 50vh;
 
     }
+}
 
+
+.about-us{
+  margin: 3rem 0;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
 }
+
+
