--- a/SlideShow Corousel/style.css
+++ b/SlideShow Corousel/style.css
@@ -71,7 +71,7 @@ nav .logo img{
 
 nav .nav-links li a{
     display: inline-block;
-    padding: 15px;
+    padding: 15px 30px;
     color: #fff;
     text-decoration: none;
     font-size: 1.1rem;
