added scroll behavior

--- a/SlideShow Corousel/blog/blog.css
+++ b/SlideShow Corousel/blog/blog.css
@@ -8,6 +8,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html, body{
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
 
 .showcase{
     min-height: 35vh;
