--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -1,337 +1,441 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap');
 
 /* || RESET */
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
-  img{
-    width: 100%;
-    overflow-y: hidden;
-  }
+/* BASIC STYLES */
 
-  body, html{
-    font-family: 'Roboto', sans-serif;
-    background-color: #fff;
-    color: #333;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-  }
-
-  #main-header{
-    /* height: calc(100vh - 180px); */
-    height: 70vh;
-    width: 100%;
-    background-color: #eee;
-    overflow: hidden;
+body, html{
+    font-family: 'Open Sans', sans-serif;
     position: relative;
-  }
+    scroll-behavior: smooth;
+}
 
-  .header-slogan{
-    font-size: 1rem;
-    text-align: center;
-    font-weight: 600;
-    color: #053b50;
-    margin: 0.7rem 0.7rem;
-  }
+body{
+    background-color: #f5f5f5;
+    color: #000;
+    width: 100%;
+}
 
-  nav{
-    background-color: #053b50;
+h1, h2, h3, h4, h5, h6, p, a, ul, li, img, i{
+    transition: all .3s ease-in-out;
+}
+
+h1, h2, h3, h4, h5, h6{
+    font-weight: 700;
+}
+
+a{
+    text-decoration: none;
+    color: #000;
+}
+
+.register-btn a, .upcoming-events a, .social-links{
+    color: #fff;
+}
+
+a:hover, .social-links i:hover{
+    text-decoration: none;
+    color: orangered;
+}
+
+ul{
+    list-style: none;
+}
+
+img{
+    max-width: 100%;
+}
+
+
+/* ||HEADER */
+#main-header{
+    background-color: #fff;
+    min-height: 100vh;
+    overflow: hidden;
+}
+
+.rows{
+    width: 100%;
+    min-height: 18vh;
+}
+
+.top-row-one{
+    /* background-color: #eee; */
+    background-color: rgb(107,0,62);
+    /* background-color: #1f1f2c; */
+    color: #fff;
+    padding: 10px 100px;
+    text-transform: uppercase;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+/* social-links SECTION */
+.social-links{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.social-links i{
+    font-size: 20px;
+    color: #fff;
+}
+
+/* UPCOMING EVENT SECTION */
+.upcoming-events{
     color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1rem;
-    width: 100%;
+    flex-wrap: wrap;
+    gap: 60px;
 }
 
-nav .logo img{
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin: 6px;
-  font-size: 25px;
-  cursor: pointer;
-}
-
-.mainMenu{
+#countdown{
     display: flex;
-    list-style: none;
-}
-
-.nav-links{
-    display: inline-flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin-right: 9rem;
+    flex-wrap: wrap;
+    gap: 40px;
 }
 
-nav .nav-links li a{
-    display: inline-flex;
-    padding: 0 30px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: 400;
-    transition: all 0.5s ease-in-out;
+#countdown span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-nav .nav-links li a:hover{
-    color: orangered;
-}
+/* top-row-two */
+.top-row-two{
+    background-color: #eee;
+    padding: 20px 100px;
+    text-transform: uppercase;
+    /* box shadow */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 
-nav .nav-links li a:focus,
-nav .nav-links li a:active {
-    transform: scale(1.2);
-    color: orangered;
-  }
-
-.openMenu{
-    display: none;
-    margin: 20px;
-    cursor: pointer;
-    font-size: 2rem;
-}
-
-nav .mainMenu .closeMenu, .icons i{
-    display: none;
-    font-size: 2rem;
-    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
-/* .membership-btn i{
-    padding-right: 0.2rem;
-  }  */
 
-  .membership-btn {
-    background: #fff;
-    border-radius: 10px;
-    padding: 10px 15px;
-    color: #053b50;
-    text-transform: lowercase;
-    transition: all 1s;
-  }
-
-  .membership-btn a{
-    text-decoration: none;
-    color: #053b50;
-    font-size: 1.3rem;
-    font-weight: 400;
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
   }
   
-  .membership-btn:hover  {
-    background-color: aqua;
+  /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+  /* .sticky + .content {
+    padding-top: 102px;
+  } */
+
+
+
+/* logo */
+.logo{
+    width: 50px;
+    height: 50px;
+}
+
+.logo a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo span{
+    font-size: 20px;
+    font-weight: 700;
+    color: #000;
+    float: right;
+}
+
+/* nav */
+.nav-links ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.nav-links ul li{
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.nav-links ul li a{
+    color: #000;
+}
+
+.nav-links ul li a:hover{
+    color: orangered;
+}
+
+/* donate-btn */
+.donate-btn{
+    background-color: rgb(107,0,62);
+    padding: 10px 20px;
+    border-radius: 5px;
     cursor: pointer;
-  }
-
-  .membership-btn a:hover{
-    color: #053b50;
-  }
-
-
-
-  /* HERO SECTION */
-
-.slideshow-container {
-  width: 100%;
-  position: relative;
-  margin: auto;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 3s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-  #pauseButton{
-    position: absolute;
-    top: 20%;
-    right: 50px;
-    font-size: 1rem;
+.donate-btn a{
     color: #fff;
-    cursor: pointer;
-    border-radius: 50%;
-    border:2px solid #053b50;
-    background-color: rgba(51, 51, 51, 0.397);
-    width: 40px;
-    height: 40px;
+}
+
+.donate-btn:hover{
+    background-color: rgba(107, 0, 62, 0.8);
+}
+
+/* HERO SECTION */
+.hero-section{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) ,url(../images/hero-1.JPG);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 82vh;
 
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+    overflow: hidden;
+    position: relative;
+}
 
-  .caption{
+.hero-text{
     position: absolute;
-    top: 20%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 2rem;
-    color: #fff;
     text-align: center;
-    width: 50%;
-    padding: 1rem 0.3rem;
-    background-color: rgba(51, 51, 51, 0.397);
-    border-radius: 10px;
-  }
+}
 
-  .caption h1{
-    font-family: 'Roboto', sans-serif;
+.hero-section h1{
+    font-size: 50px;
     font-weight: 400;
-  }
-
-  .caption p{
-    font-weight: 300;
-  }
-
-  /* scroll-top-btn */
-  .scroll-top-btn{
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 30px;
-    height: 30px;
-    background-color: rgba(0, 0, 0, 0.9);
-    color: #fff;
-    border-radius: 50%;
-    font-size: 1.5rem;
+    text-transform: uppercase;
     text-align: center;
-    padding: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    z-index: 1000;
-  }
-
-  .scroll-top-btn a{
-    text-decoration: none;
     color: #fff;
-  }
+    /* color: #1f1f2c; */
+}
 
-  .scroll-top-btn:hover{
-    background-color: rgba(0, 0, 0, 0.7);
+.hero-section p{
     color: #fff;
-  }
+    font-size: 20px;
+    font-weight: 500;
+    margin: 20px 0 40px 0;
+    line-height: 1.7;
+}
 
-  
+.hero-text a{
+    background-color: rgb(107,0,62);
+    padding: 15px 25px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
 
-  @media (max-width: 768px){
-    nav .mainMenu{
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 100%;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        z-index: 10;
-        background-color: rgba(0 , 0, 0, 0.9);
-        display: none;
-        transition: top 1s ease;
-    }
 
-    nav .nav-links{
-        display: block;
-    }
+
+/* ABOUT US SECTION */
+.about-us{
+    padding: 100px 100px;
+    background-color: #fff;
+    color: #000;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
+    text-align: center;
+}
+
+.about-us-left, .about-us-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.left, .right{
+    background-color: #eee;
+    padding: 20px;
+    border-radius: 5px;
+    width: 250px;
+    height: 200px;	
+    text-transform: uppercase;
+    /* box shadow */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.left i, .right i{
+    font-size: 40px;
+    color: rgb(107,0,62);
+}
+
+.left img, .right img{
+    width: 100px;
+}
+
+.about-us-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.about-us-center h2{
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.about-us-center .blockquote{
+    font-weight: 500;
+    line-height: 1.7;    
+}
+
+.about-us-center h1{
+    font-size: 60px;
+    font-weight: 400;
+    color: rgb(107,0,62);
+    /* text-transform: uppercase; */
+}
+
+
+
+/* upcoming event section */
+.upcoming-events-section{
+    width: 100%;
+    padding: 70px 100px;
+    padding-left: 200px;
+    margin-bottom: 70px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)) ,url(../images/Adventist\ melody.JPG);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.upcoming-events-section h1{
+    font-size: 36px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.upcoming-events-section p{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 20px 0 40px 0;
+}
+
+
+/* eldership-profile */
+.eldership-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.profile{
+    width: 200px;
+    height: 200px;
+    background-color: #eee;
+    padding: 20px;
+    border-radius: 5px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.profile img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+
+
+/* gallery-section */
+.gallery-section{
+    width: 100%;
+    /* padding: 100px 100px; */
+    background-color: #fff;
+    color: #000;
+    margin-bottom: 70px;
 
     
-    nav .mainMenu .closeMenu{
-        display: block;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-    }
+}
 
-    nav .openMenu{
-        display: block;
-        background-color: none;
-    }
-
-    nav .mainMenu li{
-        text-align: center;  
-    }
-
-    nav .mainMenu li a{
-        font-size: 1.6rem;
-    }
-
-    nav .mainMenu li a:hover{
-        background-color: none;
-        color: aqua;
-    }
-
-    .icons i{
-        display: inline-block;
-        padding: 12px;
-    }
-
-    .icons i:hover{
-        background-color: none;
-        color: aqua;
-    }
-
-    .membership-btn{
-        margin-top: 40px;
-    }
-
-
-    .arrow-down i{
-      display: none;
-    }
-
-    .caption{
-      top: 30%;
-      width: 80%;
-      font-size: 1.5rem;
-    }
-
-    .caption h1{
-      font-size: 1.5rem;
-    }
-
-    .caption p{
-      font-size: 1rem;
-    }
-
-    #pauseButton{
-      top: 40%;
-      right: 20px;
-      font-size: 1rem;
-      width: 30px;
-      height: 30px;
-    }
-
-    #main-header{
-      height: 50vh;
-
-    }
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    /* grid-gap: 40px; */
+    text-align: center;
 }
 
 
-.about-us{
-  margin: 3rem 0;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 
+
+
+/* Style the search icon */
+.fa-search {
+    font-size: 20px;
+    color: #555; /* Change the color to your preference */
+    cursor: pointer; /* Show pointer cursor when hovering over the icon */
 }
 
+/* Style the search box container */
+#search-box {
+    display: none; /* Initially hidden */
+    margin-top: 10px; /* Adjust the spacing as needed */
+    position: relative; /* Position relative to the icon */
+}
+
+/* Style the search input field */
+#search-input {
+    padding: 5px;
+    width: 200px; /* Adjust the width as needed */
+    border: 1px solid #ccc; /* Border style */
+    border-radius: 4px; /* Rounded corners */
+    outline: none; /* Remove default focus outline */
+}
+
+/* Style the search input field when focused */
+#search-input:focus {
+    border-color: #007BFF; /* Change the border color when focused */
+}
 
