--- a/client/src/components/Family/SingleFamily/SingleFamily.css
+++ b/client/src/components/Family/SingleFamily/SingleFamily.css
@@ -22,7 +22,7 @@
 .team-leaders
 {
 	display: grid;
-	grid-template-columns: repeat(2,1fr);
+	grid-template-columns: repeat(3,1fr);
 	gap: 10px;
 	justify-content: center;
 	align-items: center;
@@ -40,7 +40,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: auto;
+	margin:10px auto;
 }
 .team-leader .leader-content
 {
@@ -64,7 +64,7 @@
 	grid-template-columns: repeat(3,1fr);
 	justify-content: center;
 	align-items: center;
-	margin: auto;
+	margin: 30px auto;
 	gap: 10px;
 	/* margin: 2rem 0;
 	display: flex;
