style(Banner): enhance hero text styling with increased font weight and size

--- a/client/src/components/Header/Banner.css
+++ b/client/src/components/Header/Banner.css
@@ -17,6 +17,11 @@
     color: white;
 }
 
+.hero-text h1{
+    font-weight: 600;
+    font-size: 3rem;
+}
+
 .youtube-thumbnail-link {
     position: absolute;
     bottom: 80px;
