--- a/client/src/components/Family/FAQ/FamilyFAQ.css
+++ b/client/src/components/Family/FAQ/FamilyFAQ.css
@@ -15,6 +15,8 @@
   text-align: center;
   font-weight: bolder;
   font-size: 32px;
+  color: #fff;
+  padding-top: 50px;
 }
 
 /* Column Grid Layout */
