style: update global CSS to define background color using primary color light variable

--- a/client/src/global/global.css
+++ b/client/src/global/global.css
@@ -1,10 +1,16 @@
-.root {
+.bg-color {
     --primary-color: #12ac8e;
     --primary-color-dark: #0d846c;
-    --primary-color-light: #e9f7f7;
+    --primary-color-light: hsla(167, 70%, 82%, 0.50);
     --secondary-color: #fb923c;
     --text-dark: #333333;
     --text-light: #767268;
     --white: #ffffff;
     --max-width: 1200px;
+  }
+
+
+
+.bg-color{
+    background-color: var(--primary-color-light);
   }
